Fixed illustration "men" aligning&sizing between text blocks

--- a/css/style_new.css
+++ b/css/style_new.css
@@ -3133,9 +3133,9 @@ ul.infrestructure.span6 {
 }
 .mans {
   /*padding: 0;*/
-  height: 375px;
+  height: 380px;
   width: 40%;
-  padding: 0px 0;
+  padding: 2px 0 0;
   margin-left: -30px;
 }
 .bussiness-ex .mans {
@@ -3338,7 +3338,7 @@ ul.infrestructure.span6 {
     padding-bottom: 30px;
     padding: 35px 0 35px 10px;*/
     padding: 0;
-    margin: 17px 0;
+    margin: 7px 0;
   }
   .modal-content ul li:not(.hide):nth-child(even):after {
 /*    content:"\a";
